[gd_scene load_steps=11 format=1]

[ext_resource path="res://scripts/game/tutorial/1/secretroom/computerPuzzle.gd" type="Script" id=1]
[ext_resource path="res://assets/game/tutorial/1/secretroom/bg_computer.png" type="Texture" id=2]
[ext_resource path="res://scenes/game/riddleOverlay.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/segoeuisbi24.fnt" type="BitmapFont" id=4]
[ext_resource path="res://fonts/segoeuisli24.fnt" type="BitmapFont" id=5]
[ext_resource path="res://fonts/segoeuisb24.fnt" type="BitmapFont" id=6]
[ext_resource path="res://fonts/segoeuisl24.fnt" type="BitmapFont" id=7]
[ext_resource path="res://themes/text30.tres" type="Theme" id=8]
[ext_resource path="res://themes/text24.tres" type="Theme" id=9]
[ext_resource path="res://fonts/segoeuisl40.fnt" type="BitmapFont" id=10]

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="bg" type="TextureFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = -1880.0
margin/bottom = -1040.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="riddleOverlay" parent="." instance=ExtResource( 3 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
alignment = 0

[node name="screen" type="VBoxContainer" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 968.0
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/screen"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 482.0
alignment = 1

[node name="welcomeText" type="RichTextLabel" parent="VBoxContainer/screen/VBoxContainer"]

rect/min_size = Vector2( 0, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 127.0
margin/right = 1920.0
margin/bottom = 207.0
custom_fonts/bold_italics_font = ExtResource( 4 )
custom_fonts/italics_font = ExtResource( 5 )
custom_fonts/bold_font = ExtResource( 6 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="passwordDisplay" type="PanelContainer" parent="VBoxContainer/screen/VBoxContainer"]

rect/min_size = Vector2( 400, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 760.0
margin/top = 211.0
margin/right = 1160.0
margin/bottom = 256.0

[node name="passwordDisplay" type="Label" parent="VBoxContainer/screen/VBoxContainer/passwordDisplay"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 8 )
margin/left = 7.0
margin/top = 7.0
margin/right = 393.0
margin/bottom = 38.0
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="tipButton" type="Button" parent="VBoxContainer/screen/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
theme/theme = ExtResource( 9 )
margin/left = 803.0
margin/top = 260.0
margin/right = 1116.0
margin/bottom = 291.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "J'ai oubli√© mon mot de passe"
flat = false

[node name="tip" type="Label" parent="VBoxContainer/screen/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 9 )
margin/left = 0.0
margin/top = 295.0
margin/right = 1920.0
margin/bottom = 320.0
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="validateButton" type="Button" parent="VBoxContainer/screen/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
theme/theme = ExtResource( 9 )
margin/left = 887.0
margin/top = 324.0
margin/right = 1032.0
margin/bottom = 355.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Se connecter"
flat = false

[node name="VBoxContainer 2" type="VBoxContainer" parent="VBoxContainer/screen"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 486.0
margin/right = 1920.0
margin/bottom = 968.0
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/screen/VBoxContainer 2"]

rect/min_size = Vector2( 700, 400 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 610.0
margin/top = 41.0
margin/right = 1310.0
margin/bottom = 441.0

[node name="message" type="RichTextLabel" parent="VBoxContainer/screen/VBoxContainer 2/PanelContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
theme/theme = ExtResource( 9 )
margin/left = 7.0
margin/top = 7.0
margin/right = 693.0
margin/bottom = 393.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 972.0
margin/right = 1920.0
margin/bottom = 975.0

[node name="keyboard" type="PanelContainer" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 648.0
margin/top = 979.0
margin/right = 1272.0
margin/bottom = 1080.0

[node name="keyboard" type="VBoxContainer" parent="VBoxContainer/keyboard"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 7.0
margin/top = 7.0
margin/right = 617.0
margin/bottom = 94.0
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/keyboard/keyboard"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 610.0
margin/bottom = 37.0
alignment = 1

[node name="shortButton" type="Button" parent="VBoxContainer/keyboard/keyboard/HBoxContainer"]

rect/min_size = Vector2( 200, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 8 )
margin/left = 1.0
margin/top = 0.0
margin/right = 201.0
margin/bottom = 37.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "*"
flat = false

[node name="longButton" type="Button" parent="VBoxContainer/keyboard/keyboard/HBoxContainer"]

rect/min_size = Vector2( 200, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 8 )
margin/left = 205.0
margin/top = 0.0
margin/right = 405.0
margin/bottom = 37.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "-"
flat = false

[node name="correctButton" type="Button" parent="VBoxContainer/keyboard/keyboard/HBoxContainer"]

rect/min_size = Vector2( 200, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 8 )
margin/left = 409.0
margin/top = 0.0
margin/right = 609.0
margin/bottom = 37.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "C"
flat = false

[node name="spaceButton" type="Button" parent="VBoxContainer/keyboard/keyboard"]

rect/min_size = Vector2( 610, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 0.0
margin/top = 41.0
margin/right = 610.0
margin/bottom = 87.0
custom_fonts/font = ExtResource( 10 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[connection signal="pressed" from="VBoxContainer/screen/VBoxContainer/tipButton" to="." method="_on_tipButton_pressed"]

[connection signal="pressed" from="VBoxContainer/screen/VBoxContainer/validateButton" to="." method="_on_validateButton_pressed"]

[connection signal="pressed" from="VBoxContainer/keyboard/keyboard/HBoxContainer/shortButton" to="." method="_on_shortButton_pressed"]

[connection signal="pressed" from="VBoxContainer/keyboard/keyboard/HBoxContainer/longButton" to="." method="_on_longButton_pressed"]

[connection signal="pressed" from="VBoxContainer/keyboard/keyboard/HBoxContainer/correctButton" to="." method="_on_correctButton_pressed"]

[connection signal="pressed" from="VBoxContainer/keyboard/keyboard/spaceButton" to="." method="_on_spaceButton_pressed"]


